# transcriber

./: .gitignore  LICENSE  README.md  pyproject.toml
bar/: TranscriberStatus.qml
scripts/: README.md  install_widget.sh  ratio_distributions.json  time_saved.py  toggle_transcribe.sh
transcriber/: __init__.py  audio_buffer.py  audio_device.py  deps.py  filters.yaml  main.py  metrics.py  noise_reduction.py  session.py  transcript.py  typer.py  typer_rules.yaml
transcriber/typer/: __init__.py  backends.py  detection.py  typer.py
