[project]
name = "transcriber"
version = "0.1.0"
description = "Real-time audio transcription with OpenAI API"
requires-python = ">=3.12"
dependencies = [
    "pyaudio>=0.2.14",
    "websocket-client>=1.7.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "numpy>=2.0.0",
]

[project.scripts]
transcribe = "transcriber.main:main"

[tool.setuptools]
packages = ["transcriber"]

[tool.uv]
package = true
